<resources>
    <string name="app_name">RunningApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="google_maps_key">AIzaSyCCYJhBY5T4LGlQWgu6HabHWGxK9a5Z5-4</string>
    <string name="sort_by">Sort by:</string>
    <string name="welcome_text">Welcome!\nPlease enter your name and weight.</string>
    <string name="your_name">Your Name</string>
    <string name="your_weight">Your Weight</string>
    <string name="kg">kg</string>
    <string name="continue_btn">Continue</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_time">Total Time</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <!--Login and Register -->
    <string name="login_header">FASTER</string>
    <string name="login_sub_header">App for runners</string>
    <string name="login_text">Login</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="continue_with_google_text">Continue with Google</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="register_text">Register</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_account">account</string>
    <string name="account_change_email">Change Email</string>
    <string name="account_preferences">preferences</string>
    <string name="account_display">Display</string>
    <string name="account_log_out">Log out</string>
</resources>