<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AccountFragment"
    android:background="@color/md_grey_100">

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        style="@style/AccountSection"
        android:text="@string/account_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyTextButton"
        android:text="@string/account_change_email"
        app:layout_constraintTop_toBottomOf="@id/tv_account"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AccountSection"
        android:text="@string/account_preferences"
        app:layout_constraintTop_toBottomOf="@id/button_change_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyTextButton"
        android:text="@string/account_display"
        app:layout_constraintTop_toBottomOf="@id/tv_preferences"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="@style/MyTextButton"
        android:textColor="@color/orange"
        android:gravity="center"
        android:text="@string/account_log_out"
        app:layout_constraintTop_toBottomOf="@id/button_display"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>